Case insensitively sort images in active-imageviewer.

BUG: 284672
(cherry picked from commit b972e1828ef050d784196e0915c04a13b7cbb31a)